<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightOrange"
    android:padding="30sp"
    tools:context=".controller.Updateactivity">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/update_name"
        android:layout_width="220dp"
        android:layout_height="51dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/name"
        android:textSize="15sp"
        android:padding="10sp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <EditText
        android:id="@+id/update_lastName"
        android:layout_width="220dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastName"
        android:textSize="15sp"
        android:autofillHints="lastName"
        android:padding="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_name"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/update_email"
        android:layout_width="220dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textSize="15sp"
        android:padding="10sp"
        android:autofillHints="email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_lastName"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/update_Number"
        android:layout_width="220dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/number"
        android:textSize="15sp"
        android:autofillHints="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_email"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/update_Birthday"
        android:layout_width="220dp"
        android:layout_height="51dp"
        android:autofillHints="birthday"
        android:ems="10"
        android:hint="@string/birthday"
        android:inputType="date"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_Number"
        app:layout_constraintVertical_bias="0.082" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="295dp"
        android:layout_height="53dp"
        android:text="@string/description_update"
        android:textAllCaps="false"
        android:background="@color/orange"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_Birthday"
        app:layout_constraintVertical_bias="0.25" />
    <Button
        android:id="@+id/delete_button"
        android:layout_width="295dp"
        android:layout_height="53dp"
        android:text="@string/description_delete"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button"
        app:layout_constraintVertical_bias="0.25" />

    <ImageButton
        android:id="@+id/Call_button"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:background="@color/orange"
        android:contentDescription="@string/call"
        android:text="@string/call"
        app:layout_constraintStart_toEndOf="@+id/imageProfile"
        app:layout_constraintTop_toBottomOf="@+id/choose_image"
        app:srcCompat="@drawable/call" />

    <ImageButton
        android:id="@+id/go_to_SMS"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@color/orange"
        android:contentDescription="@string/sms"
        android:text="@string/sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Call_button"
        app:layout_constraintTop_toBottomOf="@+id/choose_image"
        app:srcCompat="@drawable/baseline_textsms_24" />

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="92dp"
        android:layout_height="99dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/update_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:background="@color/orange"
        android:padding="10sp"
        android:text="@string/choose_image"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/update_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toEndOf="@+id/imageProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>